2003-06-20  Dominique Devriese  <devriese@kde.org>

	* fix this bug: "3) When I select a segment, in his popup there are
	two same entry in Construct submenu, called Mid point an
	Midpoint. Why?" as reported by Pino Toscano
	

2003-06-11  Dominique Devriese  <devriese@kde.org>

	* move transformations to their own menu entry, thanks to Pino
		Toscano

	* move angle stuff to their own objects submenu, and toolbar,
		thanks to Pino Toscano

	* update the images in the docs, thanks to Pino Toscano

2003-06-04  Dominique Devriese  <devriese@kde.org>

	* show an appropriate error when trying to open an non-existing
		file..

	* clean up the object parent-child relation mechanism.  Rather
	large code cleanup, that simplifies a lot of code..  Needed a
	backwards-compatible file format extension.  This commit now also
	adds proper treatment of internal objects, because it no longer
	relies on the inherently wrong isInternal() hack, but features The
	Correct Fix(tm).

2003-06-03  Dominique Devriese  <devriese@kde.org>

	* bugfix: show default icons for actions that don't have any.. (
		fixes bug #59283 )

	* release Kig 0.5.1

2003-05-30  Dominique Devriese  <devriese@kde.org>

	* Add an option to select the part of the screen that should be
		shown by dragging a rect..

2003-05-28  Dominique Devriese  <devriese@kde.org>

	* fix warnings when compiling with --disable-debug

2003-05-26  Dominique Devriese  <devriese@kde.org>

	* fix a crash bug for a weird cubic situation

2003-05-25  Dominique Devriese  <devriese@kde.org>

	* implement another of Stephan Binner's suggestions: in the set
		coordinate system popup, show a checked mark next to the 
		current coordinate system..

	* fix a bug that caused the "circle by center and point" type to
		not be visible..

2003-05-24  Dominique Devriese  <devriese@kde.org>

	* when the user tries to construct a macro that constructs an
		object from its children, warn him instead of